configuration and swagger

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 	<properties>
 		<java.version>8</java.version>
 		<org.keycloak.version>11.0.1</org.keycloak.version>
-		<sonar.projectKey>cb326711c47c07bb48e5c6e4aa702806f23fa772</sonar.projectKey>
+		<sonar.projectKey>cb326711c47c07bb48e5c6e4aa702806f23fa772
+		</sonar.projectKey>
 	</properties>
 
 	<dependencies>
@@ -56,6 +57,22 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.springfox</groupId> -->
+<!-- 			<artifactId>springfox-swagger2</artifactId> -->
+<!-- 			<version>2.9.2</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.springfox</groupId> -->
+<!-- 			<artifactId>springfox-swagger-ui</artifactId> -->
+<!-- 			<version>2.9.2</version> -->
+<!-- 		</dependency> -->
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -65,11 +82,6 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
 		</dependency>
 
 		<dependency>
