storage of incoming person

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 keycloak.principal-attribute=preferred_username
 springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
