--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>de.kreth.clubhelper</groupId>
 	<artifactId>ClubhelperModel</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<name>clubhelper-model</name>
 	<description>Model for Clubhelper Projects</description>
 
@@ -94,7 +94,7 @@
 		<dependency>
 			<groupId>de.kreth.clubhelper</groupId>
 			<artifactId>clubhelper-data</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
+			<version>0.1.0</version>
 		</dependency>
 	</dependencies>
 
