Next development version 0.1.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
 		<dependency>
 			<groupId>de.kreth.clubhelper</groupId>
 			<artifactId>clubhelper-data</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
