--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-
-	<groupId>de.kreth.clubhelper</groupId>
 	<artifactId>ClubhelperModel</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
 	<name>clubhelper-model</name>
 	<description>Model for Clubhelper Projects</description>
 
+	<parent>
+		<groupId>de.kreth.clubhelper</groupId>
+		<artifactId>clubhelper.parent</artifactId>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../clubhelper.parent</relativePath>
+	</parent>
+
 	<properties>
-		<java.version>8</java.version>
-		<org.keycloak.version>11.0.1</org.keycloak.version>
 		<sonar.projectKey>cb326711c47c07bb48e5c6e4aa702806f23fa772</sonar.projectKey>
 	</properties>
 
@@ -83,26 +79,12 @@
 		<dependency>
 			<groupId>com.googlecode.libphonenumber</groupId>
 			<artifactId>libphonenumber</artifactId>
-			<version>8.11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.kreth.clubhelper</groupId>
 			<artifactId>clubhelper-data</artifactId>
-			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.keycloak.bom</groupId>
-				<artifactId>keycloak-adapter-bom</artifactId>
-				<version>${org.keycloak.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<build>
 		<plugins>
