--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 keycloak.principal-attribute=preferred_username
 springdoc.swagger-ui.path=/swagger-ui.html
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+# logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+# logging.level.org.keycloak=DEBUG
+# logging.level.org.springframework.security=DEBUG
+logging.level.de=DEBUG
