--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>de.kreth.clubhelper</groupId>
 		<artifactId>clubhelper.parent</artifactId>
-		<version>0.1.1-SNAPSHOT</version>
+		<version>0.2.0</version>
 		<relativePath>../clubhelper.parent</relativePath>
 	</parent>
 
