--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>de.kreth.clubhelper</groupId>
 		<artifactId>clubhelper.parent</artifactId>
-		<version>0.2.1-SNAPSHOT</version>
+		<version>0.3.0</version>
 		<relativePath>../clubhelper.parent</relativePath>
 	</parent>
 
@@ -104,5 +104,6 @@
 		<url>scm:git:https://github.com/markuskreth/clubhelper_backend_model.git</url>
 		<developerConnection>scm:git:https://github.com/markuskreth/clubhelper_backend_model.git</developerConnection>
 		<connection>scm:git:https://github.com/markuskreth/clubhelper_backend_model.git</connection>
-	</scm>
+	  <tag>clubhelper.parent-0.3.0</tag>
+  </scm>
 </project>
